# sdl-opengl-cpp

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
include/: SDL_glfuncs.h  clipping_planes.h  error.h  errors.h  gl_context.h  move_checker.h  opengl.h  program.h  sdl.h  sdl_base.h  sdl_opengl.h  sdl_opengl_runner.h  sdl_surface_base.h  sdl_window.h  sdl_wrapper.h  shader.h  vertex_array_object.h  vertex_buffer_object.h
scripts/: sdl-opengl-cpp-config.cmake.in
scripts/cmake/: common.cmake
src/: error.cpp  errors.cpp  gl_context.cpp  program.cpp  sdl.cpp  sdl_base.cpp  sdl_opengl.cpp  sdl_opengl_runner.cpp  sdl_surface_base.cpp  sdl_window.cpp  sdl_wrapper.cpp  shader.cpp  vertex_array_object.cpp  vertex_buffer_object.cpp
test/: CMakeLists.txt
test/include/: mock_opengl.h  mock_sdl.h  program_test.h  sdl_opengl_test.h  sdl_opengl_tester.h  sdl_surface_test.h  sdl_test.h  sdl_window_test.h  shader_test.h  vertex_array_object_test.h  vertex_buffer_object_test.h
test/integration/build-tree-integration-test/: CMakeLists.txt
test/integration/install-integration-test/: CMakeLists.txt
test/integration/install-integration-test/install-integration-test/: CMakeLists.txt
test/integration/install-integration-test/install-integration-test/src/: #CMakeLists.txt#  .#CMakeLists.txt  sdl-opengl-cpp-install-integration-test.cpp
test/src/: program_test.cpp  sdl_opengl_test.cpp  sdl_opengl_tester.cpp  sdl_surface_test.cpp  sdl_test.cpp  sdl_window_test.cpp  shader_test.cpp  vertex_array_object_test.cpp  vertex_buffer_object_test.cpp
